<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_viewProfile"
            android:title="@string/view_profile" />
        <item
            android:id="@+id/nav_EditProfile"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_BidHistory"
            android:title="@string/bid_history" />
        <item
            android:id="@+id/logout"
            android:title="@string/log_out" />
    </group>
</menu>